@@ -3116,7 +3116,7 @@ EOFPGSZ
     $modelname =~ s/[^A-Za-z0-9 \.\/\-\+]//gs;
     # Do not use "," or "+" in the *ShortNickName to make the Windows
     # PostScript drivers happy
-    my $shortnickname = "$make $model ($drivername)";
+    my $shortnickname = "$make $model $drivername";
     if (length($shortnickname) > 31) {
 	# ShortNickName too long? Shorten it.
 	my %parts;
@@ -3145,18 +3145,18 @@ EOFPGSZ
 		    $parts{$part} = join('', @words);
 		    # ... and the ShortNickName
 		    $shortnickname =
-			"$parts{'make'} $parts{'model'} ($parts{'driver'})";
+			"$parts{'make'} $parts{'model'} $parts{'driver'}";
 		    # Stop if the ShostNickName has 30 characters or less
 		    # (we have still to add the abbreviation point), if there
 		    # is only one letter left, or if the manufacturer name
-		    # is reduced to four characters. Do not accept an
+		    # is reduced to three characters. Do not accept an
 		    # abbreviation of one character, as, taking the
 		    # abbreviation point into account, it does not save
 		    # a character.
 		    last if (((length($shortnickname) <= 30) &&
 			      ($abbreviated != 1)) ||
 			     ($_ !~ /[a-zA-Z]{2,}$/) ||
-			     ((length($parts{'make'}) <= 4) &&
+			     ((length($parts{'make'}) <= 3) &&
 			      ($abbreviated != 1)));
 		}
 		#Abbreviation point
@@ -3165,7 +3165,7 @@ EOFPGSZ
 		}
 		$parts{$part} = join('', @words);
 		$shortnickname =
-		    "$parts{'make'} $parts{'model'} ($parts{'driver'})";
+		    "$parts{'make'} $parts{'model'} $parts{'driver'}";
 		last if (length($shortnickname) <= 31);
 	    }
 	    last if (length($shortnickname) <= 31);
